// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarGroup render item with children, group is open 1`] = `
<div
  class="sidebar-group"
>
  <p
    class="sidebar-heading open"
  >
    <span>
      group
    </span>
     
    <!---->
  </p>
   
  <dropdowntransition-stub>
    <ul
      class="sidebar-group-items"
    >
      <li>
        <sidebarlink-stub
          item="a"
        />
      </li>
      <li>
        <sidebarlink-stub
          item="b"
        />
      </li>
    </ul>
  </dropdowntransition-stub>
</div>
`;

exports[`SidebarGroup render item without children, group is closed 1`] = `
<div
  class="sidebar-group"
  collapse="true"
>
  <p
    class="sidebar-heading"
  >
    <span>
      group
    </span>
     
    <!---->
  </p>
   
  <dropdowntransition-stub>
    <ul
      class="sidebar-group-items"
    />
  </dropdowntransition-stub>
</div>
`;
